jupyter-js-widgets/css/widgets-base.css
/* ... */
.p-Widget.jupyter-widgets {
    overflow: visible;
}

.jupyter-widgets {
    margin: var(--jp-widgets-margin);
    box-sizing: border-box;
    color: var(--jp-content-font-color1);
}

.jp-Output-result > .jupyter-widgets {
    margin-left: 0;
    margin-right: 0;
}

/* vbox and hbox */

.widget-hbox {
    /* Horizontal widgets */
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

.widget-vbox {
    /* Vertical Widgets */
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.widget-box {
    /* Box */
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    align-items: flex-start;
}

/* General Button Styling */

.jupyter-button {
    padding: 0;
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: center;
    font-size: var(--jp-ui-font-size1);
    cursor: pointer;

    height: var(--jp-widgets-inline-height);
    border: var(--jp-widgets-border-width) solid;
    line-height: calc(var(--jp-widgets-inline-height) - 2 * var(--jp-widgets-border-width));

    /* From Material Design Lite
        shadow-key-umbra-opacity: 0.2;
        shadow-key-penumbra-opacity: 0.14;
        shadow-ambient-shadow-opacity: 0.12;
     */

    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
                        0 3px 1px -2px rgba(0, 0, 0, 0.14),
                        0 1px 5px 0 rgba(0, 0, 0, 0.12);
    -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
                     0 3px 1px -2px rgba(0, 0, 0, 0.14),
                     0 1px 5px 0 rgba(0, 0, 0, 0.12);
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
                0 3px 1px -2px rgba(0, 0, 0, 0.14),
                0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

.jupyter-button i.fa {
    margin-right: var(--jp-widgets-inline-margin);
}

.jupyter-button:empty:before {
    content: "\200b"; /* zero-width space */
}

.jupyter-button:active, .jupyter-button.mod-active {
     box-shadow: none;
}

/*.jupyter-button:hover, .jupyter-button:focus, .jupyter-button:active {
    outline: none !important;
}
*/

/* Button "Default" Styling */

.jupyter-button {
    color: var(--jp-ui-font-color1);
    background-color: var(--jp-layout-color1);
    border-color: var(--jp-border-color1);
}

.jupyter-button:active, .jupyter-button.mod-active {
    color: var(--jp-ui-font-color0);
    background-color: var(--jp-layout-color0);
    border-color: var(--jp-border-color0);
}

/* Button "Primary" Styling */

.jupyter-button.mod-primary {
    color: var(--jp-inverse-ui-font-color1);
    background-color: var(--jp-brand-color1);
    border-color: var(--jp-brand-color1);
}

.jupyter-button.mod-primary.mod-active {
    color: var(--jp-inverse-ui-font-color0);
    background-color: var(--jp-brand-color0);
    border-color: var(--jp-brand-color0);
}

/* Button "Success" Styling */

.jupyter-button.mod-success {
    color: var(--jp-inverse-ui-font-color1);
    background-color: var(--jp-success-color1);
    border-color: var(--jp-success-color1);
}

.jupyter-button.mod-success.mod-active {
    color: var(--jp-inverse-ui-font-color0);
    background-color: var(--jp-success-color0);
    border-color: var(--jp-success-color0);
 }

 /* Button "Info" Styling */

.jupyter-button.mod-info {
    color: var(--jp-inverse-ui-font-color1);
    background-color: var(--jp-info-color1);
    border-color: var(--jp-info-color1);
}

.jupyter-button.mod-info.mod-active {
    color: var(--jp-inverse-ui-font-color0);
    background-color: var(--jp-info-color0);
    border-color: var(--jp-info-color0);
}

/* Button "Warning" Styling */

.jupyter-button.mod-warning {
    color: var(--jp-inverse-ui-font-color1);
    background-color: var(--jp-warn-color1);
    border-color: var(--jp-warn-color1);
}

.jupyter-button.mod-warning.mod-active {
    color: var(--jp-inverse-ui-font-color0);
    background-color: var(--jp-warn-color0);
    border-color: var(--jp-warn-color0);
}

/* Button "Danger" Styling */

.jupyter-button.mod-danger {
    color: var(--jp-inverse-ui-font-color1);
    background-color: var(--jp-error-color1);
    border-color: var(--jp-error-color1);
}

.jupyter-button.mod-danger.mod-active {
    color: var(--jp-inverse-ui-font-color0);
    background-color: var(--jp-error-color0);
    border-color: var(--jp-error-color0);
}

/* Widget Button*/

.widget-button, .widget-toggle-button {
    width: var(--jp-widgets-inline-width-short);
}

/* Widget Label Styling */

.widget-label {
    /* Label */
    font-size: var(--jp-widgets-font-size);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    line-height: var(--jp-widgets-inline-height);
}

.widget-hbox .widget-label {
    /* Horizontal Widget Label */
    text-align: right;
    margin-right: var(--jp-widgets-inline-margin);
    max-width: var(--jp-widgets-inline-label-max-width);
    min-width: var(--jp-widgets-inline-label-min-width);
    flex-shrink: 0;
}

.widget-vbox .widget-label {
    /* Vertical Widget Label */
    text-align: center;
}

/* Widget Readout Styling */

.widget-readout {
    /* Label */
    font-size: var(--jp-widgets-font-size);
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
    margin-left: var(--jp-widgets-inline-margin);
    overflow: hidden;
    white-space: nowrap;
    text-align: center;
}
/* ... */

